Fixes for site header on mobile

--- a/less/podcast.less
+++ b/less/podcast.less
@@ -5,7 +5,7 @@ article.post.category-podcast {
     min-height: 500px;
     position: relative;
 
-    @media (max-width: @inner-inner) {
+    @media (max-width: @inner-inner) and (min-height: 800px) {
       min-height: 25vh;
     }
 
