--- a/less/site-header.less
+++ b/less/site-header.less
@@ -39,9 +39,9 @@ header.site-header {
   }
 
   @media (max-width: @inner-inner) {
-    header.site-header {
-      height: 150px;
-    }
+    height: 150px;
+    margin-bottom: 2em;
+
     .site-branding {
       flex-direction: row-reverse;
       flex-wrap: wrap;
